[gd_scene load_steps=3 format=3 uid="uid://b3frvp3nb1oid"]

[ext_resource type="Script" path="res://start_button.gd" id="1_yi5kt"]
[ext_resource type="Script" path="res://contact_hive.gd" id="2_p8r3e"]

[node name="StartScreen" type="Node2D"]

[node name="start_button" type="Button" parent="."]
offset_left = 884.0
offset_top = 206.0
offset_right = 1070.0
offset_bottom = 242.0
text = "Join Hive"
script = ExtResource("1_yi5kt")

[node name="LineEdit" type="LineEdit" parent="."]
offset_left = 22.0
offset_top = 70.0
offset_right = 208.0
offset_bottom = 101.0
text = "localhost:3621"
placeholder_text = "Server Address"

[node name="contact_hive" type="Button" parent="."]
offset_left = 49.0
offset_top = 119.0
offset_right = 179.0
offset_bottom = 164.0
text = "Join Hive"
script = ExtResource("2_p8r3e")

[node name="HTTPRequest" type="HTTPRequest" parent="contact_hive"]

[connection signal="pressed" from="start_button" to="start_button" method="_on_pressed"]
[connection signal="text_changed" from="LineEdit" to="contact_hive" method="_on_line_edit_text_changed"]
[connection signal="pressed" from="contact_hive" to="contact_hive" method="_on_pressed"]
[connection signal="request_completed" from="contact_hive/HTTPRequest" to="contact_hive" method="_on_request_completed"]
